# CLion_Projects

./: .gitignore  README.md
C++_Projects/CMake_Tutorial/: CMakeLists.txt
C++_Projects/SimpleCplusplus/: CMakeLists.txt  main.cpp
C++_Projects/Simple_Class_Inheritance/: main.cpp
C++_Projects/Udemy_Sec12_ClassTemplates_CLion/: CMakeLists.txt
C++_Projects/Udemy_Sec12_FuncTemplates_CLion/: CMakeLists.txt
C_Projects/CMake_Tutorial/: CMakeLists.txt  CMake_Tutorial_Config.h.in  tutorial.c
C_Projects/Git_test_project/: CMakeLists.txt  main.c
C_Projects/Udemy_Sec12ConstantPointer/: Udemy_Sec12ConstantPointer.cbp  main.c
C_Projects/Udemy_Sec12ConstantPointer_CLion/: CMakeLists.txt  main.c
C_Projects/Udemy_Sec12PointerArithm_charExample2_CLion/: CMakeLists.txt  main.c
C_Projects/Udemy_Sec12PointerArithm_charExample_CLion/: CMakeLists.txt  main.c
C_Projects/Udemy_Sec12PointerArithmetic_CLion/: CMakeLists.txt  main.c
C_Projects/Udemy_Sec12_82UsingPointers/: Udemy_Sec12_82UsingPointers.cbp  Udemy_Sec12_82UsingPointers.depend  main.c
C_Projects/Udemy_Sec12_82UsingPointers_CLion/: CMakeLists.txt
C_Projects/Udemy_Sec12_Challenges_CLion/: CMakeLists.txt  main.c
C_Projects/Udemy_Sec12_DynamicMemAllocation_CLion/: CMakeLists.txt  main.c
C_Projects/Udemy_Sec12_PointerToConst/: Udemy_Sec12_PointerToConst.cbp  Udemy_Sec12_PointerToConst.depend  main.c
C_Projects/Udemy_Sec12_PointerToConst_CLion/: CMakeLists.txt  main.c
Simple_Class_Inheritance/: CMakeLists.txt
Thomas_Xerces_XML/RecordReader/: CMakeLists.txt  RecordSchema.cpp  RecordSchema.h
(+52 files in other folders)
